<resources>
    <string name="app_name">Calculadora</string>
    <string name="visor"> 0  </string>
    <string name="one"> 1  </string>
    <string name="two"> 2  </string>
    <string name="tree"> 3  </string>
    <string name="four"> 4  </string>
    <string name="five"> 5  </string>
    <string name="six"> 6  </string>
    <string name="mais"> +  </string>
    <string name="seven"> 7  </string>
    <string name="eight"> 8  </string>
    <string name="nine"> 9  </string>
    <string name="menos"> -  </string>
    <string name="c"> C  </string>
    <string name="zero"> 0  </string>
    <string name="igual"> =  </string>
    <string name="vezes"> X  </string>
    <string name="dividido"> /  </string>
    <string name="visorConta">  </string>

</resources>
