<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/visorConta"
        android:text="@string/visorConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/visor"
        android:text="@string/visor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="82sp"
        android:gravity="right"
        android:textAlignment="gravity"
        />


    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/one"
                android:textSize="52sp"
                android:onClick="passaVisor"

                />

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/two"
                android:textSize="52sp"
                android:onClick="passaVisor"
                />

            <Button
            android:id="@+id/tree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tree"
            android:textSize="52sp"
                android:onClick="passaVisor"
            />

            <Button
                android:id="@+id/mais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mais"
                android:textSize="52sp"
                android:onClick="passaVisor"
                />

         </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/four"
                android:textSize="52sp"
                android:onClick="passaVisor"
                />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/five"
                android:textSize="52sp"
                android:onClick="passaVisor"
                />

            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/six"
                android:textSize="52sp"
                android:onClick="passaVisor"
                />

            <Button
                android:id="@+id/menos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/menos"
                android:textSize="52sp"
                android:onClick="passaVisor"
                />

        </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/seven"
                android:textSize="52sp"
                android:onClick="passaVisor"
                />

            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/eight"
                android:textSize="52sp"
                android:onClick="passaVisor"
                />

            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nine"
                android:textSize="52sp"
                android:onClick="passaVisor"
                />

            <Button
                android:id="@+id/vezes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vezes"
                android:textSize="52sp"
                android:onClick="passaVisor"
                />

        </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/c"
            android:textSize="52sp"
            android:onClick="limpaVisor"
            />

        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="52sp"
            android:onClick="passaVisor"
            />

        <Button
            android:id="@+id/igual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/igual"
            android:textSize="52sp"
            android:onClick="igual"
            />

        <Button
            android:id="@+id/dividido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dividido"
            android:textSize="52sp"
            android:onClick="passaVisor"
            />

    </LinearLayout>

</LinearLayout>